# weather-api

./: Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini
weather_api/: manage.py  settings.py
weather_api/api/: models.py
weather_api/apps/app_forecast/: apps.py  constants.py  database.py  dates.py  exceptions.py  forecast.py  models.py  urls.py  views.py
weather_api/apps/app_forecast/management/: __init__.py
weather_api/apps/app_forecast/management/commands/: weather_forecast.py
weather_api/apps/app_forecast/migrations/: 0001_initial.py  0002_rename_result_forecast_forecast.py  0003_alter_forecast_date.py  0004_auto_20210615_2035.py  0005_auto_20210615_2128.py
weather_api/apps/app_forecast/tests/: test_dates.py  test_exceptions.py  test_forecast.py
weather_api/project/: asgi.py  settings.py  urls.py  wsgi.py
weather_api/weather_api/: settings.py
